Catch exceptions thrown by plugin callbacks