@@ -19,9 +19,11 @@ public class PluginLoaderForge extends PluginLoader
 			
 			if(Files.exists(path))
 			{
-				IModInfo modInfo = modFileInfo.getMods().get(0);
+				IModInfo modInfo = modFileInfo.getMods().getFirst();
 				this.loadPlugin(modInfo.getDisplayName(), modInfo.getModId(), path);
 			}
 		}
+		
+		this.freeze();
 	}
 }
